added tokenizer module image

--- a/LLMs/Tokenization.ipynb
+++ b/LLMs/Tokenization.ipynb
@@ -685,6 +685,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The tokenizer is a completely seprate, independent (preprocessing) module from the LLM. It has its own training dataset of text (which could be different from that of the LLM), on which you train the vocabulary using the yte Pair Encoding (BPE) algorithm. It then translates back and forth between raw text and sequences of tokens. The LLM only later sees the tokens and never directly deals with any text."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"./imgs/llm_modules.png\" width=\"50%\" />"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
