starting the decoder

--- a/LLMs/Tokenization.ipynb
+++ b/LLMs/Tokenization.ipynb
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -658,14 +658,14 @@
     }
    ],
    "source": [
-    "merges, new_token_lst = count_and_merge( tokens, 276 )\n",
-    "print(merges)\n",
-    "print(\"length of merges:\", len(merges))"
+    "tokenizer_model, new_token_lst = count_and_merge( tokens, 276 )\n",
+    "print(tokenizer_model)\n",
+    "print(\"length of merges:\", len(tokenizer_model))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The tokenizer is a completely seprate, independent (preprocessing) module from the LLM. It has its own training dataset of text (which could be different from that of the LLM), on which you train the vocabulary using the yte Pair Encoding (BPE) algorithm. It then translates back and forth between raw text and sequences of tokens. The LLM only later sees the tokens and never directly deals with any text."
+    "The tokenizer is a completely seprate, independent (preprocessing) module from the LLM. It has its own training dataset of text (which could be different from that of the LLM), on which you train the vocabulary using the yte Pair Encoding (BPE) algorithm. It then translates back and forth between raw text and sequences of tokens. The LLM only later sees the tokens and never directly deals with any text.\n",
+    "\n",
+    "The tokenizer is a translation layer between raw text and turn it into a token sequence and vice versa, it can take a token sequence and translate back into raw text.  "
    ]
   },
   {
@@ -703,6 +705,20 @@
    "metadata": {},
    "source": [
     "<img src=\"./imgs/llm_modules.png\" width=\"50%\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encoding and Decoding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decoding"
    ]
   },
   {
