--- a/LLMs/Tokenization.ipynb
+++ b/LLMs/Tokenization.ipynb
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,25 +752,139 @@
     "def decoder( tokens  ):\n",
     "\n",
     "    tokens = b\"\".join( vocab[token] for token in tokens )\n",
-    "    text = tokens.decode('utf-8')\n",
+    "    text = tokens.decode('utf-8', errors=\"replace\")\n",
     "\n",
-    "    return text\n"
+    "    return text\n",
+    "\n",
+    "# not every byte sequence is valid in UTF-8 and if it happens \n",
+    "# if your LLM predicts your tokens in a bad manner, then they \n",
+    "# might not fall into valid UTF-8 and we won't be able to decode them\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "vocab"
+    "decoder([97])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Encoding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[104]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def encoder( text ):\n",
+    "    \n",
+    "    tokens = list( text.encode('utf-8') )\n",
+    "    \n",
+    "    while len(tokens) >= 2:\n",
+    "        # find pairs\n",
+    "        pairs = count_pairs( tokens )\n",
+    "        pair = min(pairs, key=lambda p: tokenizer_model.get(p, float('inf')))\n",
+    "        if pair not in tokenizer_model:\n",
+    "            break # nothing else can merged\n",
+    "        \n",
+    "        token = tokenizer_model[pair]\n",
+    "        tokens = merge_pairs( tokens, pair, token )\n",
+    "    return tokens\n",
+    "\n",
+    "print( encoder( \"h\" ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print( decode( encode(\"hello world\") ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "text2 = decoder( encoder( text ) )\n",
+    "print( text2 == text )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "valtext = \"Many common characters, including numerals, punctuation, and other symbols, are unified within standard...\"\n",
+    "valtext2 = decoder( encoder( valtext ) )\n",
+    "print( valtext2 == valtext )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GPT Series"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
